# hogtron-agents

./: .gitignore  CLAUDE.md  PHASE-1-READINESS.md  README.md  pyproject.toml
catalog/: agents.yaml
docs/: LLM_PROTOCOL.md  README.md  architecture.md  creative-department.md  infra.md  ledger-department.md  marketing-department.md  operations-department.md  overview.md  patterns.md  research-department.md  roadmap.md  sales-department.md  upcoming-departments.md
hogtron_agents/: __init__.py
hogtron_agents/_shared/: agent_loop.py  brand.py  claude_router.py  entitlements.py  provider_breaker.py  quota_gate.py  recraft.py  router_summary.py  telemetry.py
hogtron_agents/ceo/: __init__.py  _autonomous.py  ceo.py
hogtron_agents/creative/: __init__.py  _autonomous.py  _mockup.py  _shirt.py  briefs.py  creative.py
hogtron_agents/ledger/: __init__.py  _autonomous.py  _handlers.py  briefs.py  ledger.py
hogtron_agents/marketing/: __init__.py  _autonomous.py  _etsy_listing.py  _review_response.py  _social_post.py  briefs.py  marketing.py
hogtron_agents/operations/: __init__.py  _autonomous.py  _printify_upload.py  _publish_etsy.py  _publish_pinterest.py  _render_video.py  briefs.py  operations.py
hogtron_agents/research/: __init__.py  _autonomous.py  _blocklist_data.py  _cluster_concepts.py  _find_leads.py  _geo_audit.py  _ip_clear.py  _platform_presence.py  _seo_audit.py  _trend_signals.py  briefs.py  research.py
hogtron_agents/sales/: __init__.py  _aggregator_audit_report.py  _autonomous.py  briefs.py  sales.py
hogtron_agents/sentinel/: __init__.py  _autonomous.py  _book_appointment.py  _calendar.py  _cancel.py  _capacity_audit.py  _check_conflicts.py  _contact_form.py  _find_slot.py  _ingest_intake_form.py  _reschedule.py  _respond_to_reviews.py  _score_lead.py  _tenant_config.py  briefs.py  sentinel.py
services/sentinel/: GOOGLE_SETUP.md  app.py  config.py  notifier.py  oauth_setup.py  railway.toml  requirements.txt
tests/: test_entitlements.py
(+16 files in other folders)
