[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hogtron-agents"
version = "0.1.0"
description = "HogTron department-head agents. Shared across FactoryHQ, hogtron-dashboard, and future product lines."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "imageio-ffmpeg>=0.5",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["hogtron_agents*"]
